Teams creation api for admin only refactor